<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="409dp"
            android:layout_height="62dp"
            android:text="@string/my_grocessery_watch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/TitleHome" android:gravity="center"
            android:textSize="24sp" android:background="#C2D2F1"/>

    <Button
            android:id="@+id/myListButton"
            android:layout_width="124dp"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/my_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/myFavoritesButton" />
    <Button
            android:text="@string/my_favorites"
            android:layout_width="124dp"
            android:layout_height="37dp"
            android:id="@+id/myFavoritesButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TitleHome" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton" android:layout_marginEnd="162dp" android:layout_marginRight="162dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="162dp" android:layout_marginStart="162dp" android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/TitleHome"
            app:layout_constraintStart_toStartOf="@+id/TitleHome"
            app:layout_constraintTop_toBottomOf="@+id/spinner2">

        <GridView
                android:id="@+id/gridViewFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnWidth="150dp"
                android:horizontalSpacing="15dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="15dp" />

    </LinearLayout>

    <EditText
            android:id="@+id/editText_ProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/product_s_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/buttonChooseDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="o" />

    <Spinner
            android:layout_width="117dp"
            android:layout_height="23dp"
            android:id="@+id/spinner1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/myListButton"
            android:layout_marginTop="8dp"/>
    <Spinner
            android:layout_width="145dp"
            android:layout_height="23dp"
            android:id="@+id/spinner2"
            app:layout_constraintEnd_toStartOf="@+id/spinner3"
            app:layout_constraintStart_toEndOf="@+id/spinner1"
            app:layout_constraintTop_toBottomOf="@+id/myListButton"
            android:layout_marginTop="8dp"/>
    <Spinner
            android:layout_width="117dp"
            android:layout_height="23dp"
            android:id="@+id/spinner3" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myListButton" android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="233dp"
            android:layout_height="21dp"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="95dp"
            android:layout_marginEnd="94dp"
            android:layout_marginRight="94dp"
            android:text="@string/cant_find_write_here_for_yourself"
            app:layout_constraintBottom_toTopOf="@+id/editText_ProductName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/favoritestarb"
            app:layout_constraintBottom_toBottomOf="@+id/editText_ProductName"
            app:layout_constraintEnd_toStartOf="@+id/editText_ProductName"
            app:srcCompat="@android:drawable/star_off" />

    <Button
            android:id="@+id/buttonChooseTime"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginBottom="64dp"
            android:text="@string/choose_time"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/addButton"
            app:layout_constraintEnd_toEndOf="@+id/buttonChooseDate"
            app:layout_constraintStart_toStartOf="@+id/buttonChooseDate" />

    <Button
            android:id="@+id/buttonChooseDate"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/choose_date"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonChooseTime"
            app:layout_constraintEnd_toEndOf="@+id/editText_ProductName"
            app:layout_constraintStart_toStartOf="@+id/editText_ProductName" />

</androidx.constraintlayout.widget.ConstraintLayout>