<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
            android:id="@+id/buttonCencelInAlert"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:background="#ECADAD"
            android:text="@string/cencel"
            app:layout_constraintEnd_toEndOf="@+id/editText_TimeAlert"
            app:layout_constraintTop_toBottomOf="@+id/editText_TimeAlert" />

    <EditText
            android:id="@+id/editText_TimeAlert"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/time_for_alert"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="@+id/editText_DateAlert"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_DateAlert"
            app:layout_constraintTop_toBottomOf="@+id/editText_DateAlert" />

    <EditText
            android:id="@+id/editText_DateAlert"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/date_to_alert"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/editText_ProductNameAlert"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_ProductNameAlert"
            app:layout_constraintTop_toBottomOf="@+id/editText_ProductNameAlert"
            tools:targetApi="o" />

    <EditText
            android:id="@+id/editText_ProductNameAlert"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/product_s_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

    <Button
            android:id="@+id/buttonSetInAlert"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:background="#74F638"
            android:text="@string/set"
            app:layout_constraintStart_toStartOf="@+id/editText_TimeAlert"
            app:layout_constraintTop_toBottomOf="@+id/editText_TimeAlert" />
</androidx.constraintlayout.widget.ConstraintLayout>