<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/textProductName"
            android:layout_width="111dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="262dp"
            android:layout_marginRight="262dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/product_s_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

    <TextView
            android:id="@+id/textDate"
            android:layout_width="100dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/date"
            app:layout_constraintStart_toEndOf="@+id/textProductName"
            app:layout_constraintTop_toTopOf="@+id/textProductName" />

    <TextView
            android:id="@+id/textTime"
            android:layout_width="60dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/time"
            app:layout_constraintStart_toEndOf="@+id/textDate"
            app:layout_constraintTop_toTopOf="@+id/textDate" />

    <Button
            android:id="@+id/buttonSet"
            android:layout_width="64dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:text="@string/set"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textTime"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>